styles.css
@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");

/* General styles */
:root {
	---main-font-color: #ea5824;
}

* {
	margin: 0;
	padding: 0;
	font-family: "Poppins", "serif" !important;
	box-sizing: border-box;
}

body,
html {
	line-height: 1.6;
	/* margin: 0px 100px 0px 100px; */
	overflow-x: hidden !important;
	justify-content: center;
}

/* Font */
.poppins-thin {
	font-family: "Poppins", sans-serif;
	font-weight: 100;
	font-style: normal;
}

.poppins-regular {
	font-family: "Poppins", sans-serif;
	font-weight: 400;
	font-style: normal;
}

.poppins-medium {
	font-family: "Poppins", sans-serif;
	font-weight: 500;
	font-style: normal;
}

/* Header styles */

.navbar {
	display: flex;
	justify-content: space-between;
	margin: 0;
	align-items: center;
	padding: 20px;
	background-color: #fff;
	position: fixed;
	width: 100%;
	height: 12%;
	z-index: 30;
}
@media (max-width: 768px) {
	.navbar {
		/* padding: 0 80px 0 0; */
	}
}
.logo img {
	width: 100px;
}

.nav-links {
	list-style: none;
	display: flex;
	gap: 30px;
}

.nav-links li a {
	text-decoration: none;
	color: #333;
	font-family: "Poppins", "Montserrat", "Lato", sans-serif;
	font-size: 16px;
	font-weight: 500;
	font-style: normal;
}

.nav-links li a:hover {
	color: var(---main-font-color);
}

.nav-links > .active > a {
	color: var(---main-font-color) !important;
}
.hidden {
	display: none;
}
.nav-link {
	display: flex;
	flex-direction: column;
}
.login-button {
	text-decoration: none;
	color: #fff;
	background-color: var(---main-font-color);
	padding: 10px 20px;
	border-radius: 30px;
	font-family: "Poppins", sans-serif;
	font-weight: 400;
	font-style: normal;
}

.login-button2 {
	text-decoration: none;
	color: #fff;
	background-color: var(---main-font-color);
	padding: 10px 20px;
	border-radius: 30px;
	font-family: "Poppins", sans-serif;
	font-weight: 600;
	font-style: normal;
	border: none;
	margin-top: 10%;
}

/* Hamburger Menu */
.hamburger {
	display: none;
	flex-direction: column;
	gap: 5px;
	cursor: pointer;
}

.hamburger span {
	width: 25px;
	height: 3px;
	background-color: #333;
}

@media (max-width: 768px) {
	.logo img {
		width: 120px;
	}
	.nav-links {
		display: none;
		flex-direction: column;
		background-color: #fff;
		position: absolute;
		top: 80px;
		left: 0;
		width: 100%;
		padding: 20px 0;
		box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
	}

	.nav-links.active {
		display: flex;
	}

	.hamburger {
		display: flex;
	}

	.login-button {
		display: none;
	}

	.nav-links li {
		text-align: center;
		padding: 10px 0;
	}
}

/* Services Drop Down */

.services {
	position: relative;
	box-shadow: 0px;
}

.dropdown {
	display: none;
	position: absolute;
	top: 30px;
	left: 0;
	background: #fff;
	border: 1px solid #f7b84b;
	border-radius: 8px;
	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
	padding: 20px;
	width: 650px;
	z-index: 10;
	grid-template-columns: repeat(3, 1fr);
	gap: 20px;
}

.dropdown-column {
	display: flex;
	flex-direction: column;
	gap: 10px;
}

.dropdown-item {
	color: #000;
	text-decoration: none;
	font-size: 14px;
}

.dropdown-item span {
	display: block;
	font-size: 12px;
	color: #777;
}

/* Responsive design for mobile */
@media (max-width: 768px) {
	.dropdown {
		width: 100%;
		left: 0;
		top: 40px;
		grid-template-columns: 1fr;
	}
}

/* Show dropdown when active class is added */
.dropdown.active {
	display: grid;
}

/* Style for selected dropdown item */
.dropdown-item.selected {
	color: #ff5722; /* Change text color to orange */
	font-weight: bold;
}

/* Background Icons */
.background-icons {
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	z-index: 0;
	pointer-events: none;
}

.icon {
	position: absolute;
	opacity: 0.3;
}

.speed-icon {
	top: 25%;
	left: 18%;
	width: 150px;
	opacity: 1;
	width: 15%;
}

.rocket-icon {
	top: 55%;
	right: 15%;
	width: 150px;
}

.thunder-icon {
	bottom: 20%;
	left: 10%;
	width: 100px;
}

.star-icon {
	top: 95%;
	left: 20%;
	width: 30px;
}

@media (max-width: 768px) {
	.speed-icon {
		display: none;
	}

	.rocket-icon {
		width: 60px;
		left: 10%;
	}

	.thunder-icon {
		width: 50px;
		right: 5%;
	}
}

/* Main section styles */
.main-section {
	text-align: center;
	padding: 150px 20px 0px;
	background-color: #ffffff;
}

.main-section h1 {
	font-size: 4em;
	margin-bottom: 8px;
	font-weight: 600;
}
.test {
	display: inline-flex;
	align-items: start;
	flex-direction: column;
	gap: 0;
	justify-content: center;
}
.test p {
	height: 80px;
}
.test svg {
	padding-left: 10px;
}
@media (max-width: 830px) {
	.test svg {
		display: none;
	}
	.test p {
		height: fit-content;
	}
}
.main-section h1 #first {
	color: var(---main-font-color);
}
.main_wave {
	position: absolute;
	left: 27%;
	top: 31%;
	width: 200px;
}

@media (max-width: 768px) {
	.main-section h1 {
		font-size: 3em;
		margin-bottom: 8px;
	}

	.main-section h1 span {
		color: var(---main-font-color);
	}
}

.get-start-p {
	font-size: 1.2em;
	margin-bottom: 20px;
	font-weight: 500;
	color: var(---main-font-color);
}

.cta-buttons {
	display: flex;
	justify-content: center;
	gap: 20px;
}

.cta-buttons button {
	padding: 10px 20px;
	border: none;
	cursor: pointer;
	font-size: 1em;
}

.get-started-btn {
	background-color: var(---main-font-color);
	border: none;
	color: white;
	border-radius: 30px;
}
.watch-btn span {
	color: red !important;
}
.watch-btn {
	background-color: #ffffff;
	border: 0.5px solid #a8c9fa !important;
	font-weight: bold;
	/*color: #ff4d4d;*/
	font-size: 0.8em;
	border-radius: 30px;
}
.watch-btn:hover {
	background: var(---main-font-color);
	color: white;
}
.watch-btn:hover span {
	color: white !important;
}
.verification-count {
	margin-top: 20px;
	font-size: 0.8 em;
	color: #7691dd;
}
.image-section {
	position: relative;
}
.image-section + img {
	/* width: 500px; */
	object-fit: cover;
	z-index: 1;
	top: 8px;
	object-position: center;
}
/* ... */

